2017-06-07 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-708

	* src/cloudbox.[cc,h]
	(psd_rain_W16, psd_general_MGD):
	Added. PSD core functions for Wang16 raindrop PSD and general
	modified gamma distribution. Both ported from Matlab code in CloudARTS
	and Atmlab, respectively.

	(psd_cloudice_MH97):
	Rename former IWCtopnd_MH97 / psdFromMH97 once more.

	* src/m_cloudbox.cc, methods.cc (dNdD_W16):
	Added. Wrapper WSM for Wang16 rain PSD.
	(dNdD_MH97):
	Check for negative IWC.

	* src/m_cloudbox.cc (psdMH97): IWCtopnd_MH97 / psdFromMH97 rename.

2017-06-07 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-707

	* src/cloudbox.[cc,h] (psdFromMH97):
	Fixed last-minute introduced bug *eyeroll*.

2017-06-07  Simon Pfreundschuh <simonpf@chalmers.se>

	* arts-2-3-706

	* src/oem.h: Another fix for the isnan problem.

2017-06-07 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-705

	* src/cloudbox.[cc,h] (psdFromMH97):
	Revised and renamed old IWCtopnd_MH97. Now takes a Vector of sizes.
	More rigid behaviour for out-of-bounds input parameters, pushing all
	responsibility to handle/fix them to calling function.

	* src/m_cloudbox.cc (dNdD_MH97):
	Adapted to apply new psdFromMH97 conserving old behaviour.

	* src/m_cloudradar.cc:
	Adapted to apply new psdFromMH97.

	* src/methods.cc: Cosmetical fixes.

2017-06-07  Simon Pfreundschuh <simonpf@chalmers.se>

	* arts-2-3-703

	* src/m_oem.cc: Added guards to keep isnan macro out of invlib code.

	* src/matpack.h: Rolled back using declarations, which cause build error
	on different configuration.

2017-06-07  Simon Pfreundschuh <simonpf@chalmers.se>

	* arts-2-3-702

	* src/oem.h(ArtsLog): Some cosmetical fixes for the logging class.

	* src/m_oem.cc (oem_template): Implemented some changes discussed
	with Patrick. Also fixed the length of the ml_ga_history_vector.

	* 3rdparty/invlib/*: Updated invlib library

	* src/matpack.h: Replaced Macros by using directives. Same effect, but doesn't