@@ -1,3 +1,13 @@
+2017-06-08  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-709
+
+	* src/m_abs_lookup.cc (abs_lookupSetupBatch):
+
+	Error handling was eating the original error message for invalid
+	atmospheres leaving the user with no clue why this atmosphere failed.
+	Bug reported by Alex.
+
 2017-06-07 Jana Mendrok  <jana.mendrok@chalmers.se>
 
 	* arts-2-3-708
